# git_repo

./: .gitignore  .gitmodules  README.md  rebase.md  stash.md  testingTwo.md
docs/: db.md  git.md  rust.md  web.md
learnDb/: 1-a.sql  1-b.sql  2.sql
rust-exercise/: Cargo.toml
rust-exercise/src/: anagram.rs  input.txt  input2.txt  main.rs  minesweeper.rs
rust-exercise/src/cli/: arguments.rs  search.rs  writer.rs
rust-exercise/src/ownership/: clone_or_copy.rs  i_want_both.rs  print_str.rs
rust-exercise/src/pointer/: linked_list.rs  two_boxes.rs
rust-exercise/src/task2/: circular.rs  clock.rs  concurrency.rs  minesweeper.rs  sublist.rs
rust-exercise/src/tests/: docs.rs  ownership_tests.rs
rust-server/: Cargo.toml
rust-server/src/: main.rs  state.rs
rust-server/src/api/: hello.rs  mod.rs
rust-server/src/api/authorizations/: controller.rs  mod.rs  model.rs  service.rs
rust-server/src/api/comment/: controller.rs  mod.rs  model.rs  service.rs
rust-server/src/api/movie/: controller.rs  mod.rs  model.rs  service.rs
rust-server/src/api/user/: controller.rs  mod.rs  model.rs  service.rs
rust-server/src/data/config/: app.toml
rust-server/src/lib/: aes.rs  auth.rs  client.rs  db.rs  error.rs  log.rs  mod.rs
